moved order summary into it's own file

--- a/checkout.html
+++ b/checkout.html
@@ -83,6 +83,6 @@
       </div>
     </div>
 
-    <script type="module" src="data/checkout.js"></script>
+    <script type="module" src="data/newCheckout.js"></script>
   </body>
 </html>
