adding entire project to github

--- a/checkout.html
+++ b/checkout.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="shortcut icon" type="x-icon" href="images/amazon-mobile-logo.png">
     <title>Checkout</title>
 
     <!-- This code is needed for responsive design to work.
